# agentic-ai-github-stars

./: .dockerignore  DOCKER.md  Dockerfile  README.md  app.py  db_manager.py  debug.py  docker-compose.yml  embedding_manager.py  example_usage.py  github_stars.db  health_check.py  main.py  pyproject.toml  streamlit_app.py  test_db.py  test_embeddings.py  test_export.json  test_ollama.py
